--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "@mongodb-js/saslprep": "^1.4.4",
+    "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-validator": "^7.3.1",
     "mongoose": "^9.0.2",
-    "saslprep": "^1.0.3"
+    "saslprep": "^1.0.3",
+    "slug": "^11.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
