--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mongodb-js/saslprep": "^1.4.4",
     "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/node": "^25.0.3",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
