--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "saslprep": "^1.0.3",
-    "slug": "^11.0.1"
+    "slug": "^11.0.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
+    "@types/formidable": "^3.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
